force-app/main/default/objects/Account/fields/Account_UAN__c.field-meta.xml
<CustomField>
    <fullName>Account_UAN__c</fullName>
    <label>Account UAN</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>