force-app/main/default/objects/Account/fields/Corporate_Email__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Email__c</fullName>
    <inlineHelpText>Enter the corporate email 1 into the account</inlineHelpText>
    <label>Corporate Email</label>
    <type>Email</type>
</CustomField>