force-app/main/default/objects/Account/fields/Customer_created_date__c.field-meta.xml
<CustomField>
    <fullName>Customer_created_date__c</fullName>
    <formula>Today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer created date</label>
    <type>Date</type>
</CustomField>