force-app/main/default/objects/Account/fields/Overall_Branches__c.field-meta.xml
<CustomField>
    <fullName>Overall_Branches__c</fullName>
    <label>Overall Branches</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>